# WamrTest

./: .gitignore  CMakeLists.txt  build.sh  run.sh
include/: person.pb-c.h  struct.pb-c.c  struct.pb-c.h
scripts/: build.sh
src/: CMakeLists.txt  main.c  person.pb-c.c  struct.pb-c.c  struct.pb-c.h  struct.proto  test.h
src/UDF-Benchmark/: README.md  udf_examples.py
src/UDF-Benchmark/build_user_id/: string_string_1000.csv  string_string_10000.csv  string_string_100000.csv
src/UDF-Benchmark/normalize_with_base/: string_string_string_string_string_bigint_10000.csv
src/UDF-Benchmark/point_polygen_distance/: point_point_1000.csv  point_point_10000.csv
src/UDF-Benchmark/spliter/: string_1000.csv  string_10000.csv  string_100000.csv  test.csv
src/UDF-Benchmark/string_to_bigint/: bigint_1000.csv
src/UDF-Benchmark/string_to_double/: double_100000.csv
test/: CMakeLists.txt
test/native/: CMakeLists.txt  main.c  test.h
test/native_with_ser/: CMakeLists.txt  main.c  test.h
test/wasm/: CMakeLists.txt
test/wasm_with_ser/: CMakeLists.txt  main.c
wasm-app/: CMakeLists.txt  testapp.c
